--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#6B94F8</color>
     <color name="colorPrimaryDark">#2c367a</color>
-    <color name="colorAccent">#A1D9F1</color>
+    <color name="colorAccent">#D6E8EF</color>
     <color name="textcolor">#FFFFFF</color>
     <color name="textcolorblue">#094670</color>
     <color name="colorView">#FFFFFF</color>
