--- a/app/src/main/res/layout/activity_choix3_sports.xml
+++ b/app/src/main/res/layout/activity_choix3_sports.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".choix3Sports"
     android:animateLayoutChanges="true"
-    android:background="#EEEEEE">
+    android:background="@drawable/gradient_list"
+    android:id="@+id/layoutchoix">
 
 
     <Button
@@ -15,86 +16,92 @@
         android:layout_height="43dp"
         android:background="#6693ff"
         android:text="Suivant"
+        android:textAlignment="center"
+        android:gravity="center_vertical|center_horizontal"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <ImageView
-        android:id="@+id/badminton"
-        android:layout_width="187dp"
-        android:layout_height="131dp"
+    <Spinner
+        android:id="@+id/Sportpref2_selector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.071"
+        app:layout_constraintHorizontal_bias="0.634"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.068"
-        app:srcCompat="@drawable/badminton" />
+        app:layout_constraintVertical_bias="0.32" />
 
-    <ImageView
-        android:id="@+id/football"
-        android:layout_width="187dp"
-        android:layout_height="131dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.071"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.6"
-        app:srcCompat="@drawable/foot" />
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sport préféré 3:"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
 
-    <ImageView
-        android:id="@+id/basketball"
-        android:layout_width="187dp"
-        android:layout_height="131dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.071"
+        app:layout_constraintEnd_toStartOf="@+id/Sportpref3_selector"
+        app:layout_constraintHorizontal_bias="0.68"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.336"
-        app:srcCompat="@drawable/basket" />
+        app:layout_constraintVertical_bias="0.419" />
 
-    <ImageView
-        android:id="@+id/checkbad"
-        android:layout_width="43dp"
-        android:layout_height="46dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.82"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.07999998"
-        app:srcCompat="@drawable/ic_baseline_check_24" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sport préféré 1 :"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
 
-    <ImageView
-        android:id="@+id/checkbask"
-        android:layout_width="43dp"
-        android:layout_height="46dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.82"
+        app:layout_constraintEnd_toStartOf="@+id/Sportpref1_selector"
+        app:layout_constraintHorizontal_bias="0.677"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32"
-        app:srcCompat="@drawable/ic_baseline_check_24" />
+        app:layout_constraintVertical_bias="0.219" />
 
-    <ImageView
-        android:id="@+id/checkfoot"
-        android:layout_width="43dp"
-        android:layout_height="46dp"
-        android:visibility="invisible"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sport préféré 2 :"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.82"
+        app:layout_constraintEnd_toStartOf="@+id/Sportpref2_selector"
+        app:layout_constraintHorizontal_bias="0.677"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.55"
-        app:srcCompat="@drawable/ic_baseline_check_24" />
+        app:layout_constraintVertical_bias="0.319" />
+
+    <Spinner
+        android:id="@+id/Sportpref1_selector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.634"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.219" />
+
+    <Spinner
+        android:id="@+id/Sportpref3_selector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.634"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.419" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
