--- a/app/src/main/res/layout/fragment_progression.xml
+++ b/app/src/main/res/layout/fragment_progression.xml
@@ -6,204 +6,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/SuccesView"
-        android:layout_width="171dp"
-        android:layout_height="180dp"
-        android:background="@color/colorView"
-        android:elevation="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.918"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.661" />
 
     <View
         android:id="@+id/histoView"
-        android:layout_width="171dp"
-        android:layout_height="180dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:background="@color/colorView"
         android:elevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.661" />
+        app:layout_constraintVertical_bias="0.19" />
 
     <ImageView
         android:id="@+id/Imagehisto"
         android:layout_width="141dp"
         android:layout_height="143dp"
-        android:layout_marginBottom="20dp"
+
         android:elevation="5dp"
+
         app:layout_constraintBottom_toBottomOf="@+id/histoView"
         app:layout_constraintEnd_toEndOf="@+id/histoView"
+        app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintStart_toStartOf="@+id/histoView"
-        app:layout_constraintTop_toBottomOf="@+id/PlanifierText"
-        app:layout_constraintVertical_bias="0.513"
+        app:layout_constraintTop_toTopOf="@+id/histoView"
         app:srcCompat="@drawable/ic_baseline_history_24" />
 
     <TextView
         android:id="@+id/histoText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="historique"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/histoView"
-        app:layout_constraintEnd_toEndOf="@+id/histoView"
-        app:layout_constraintStart_toStartOf="@+id/histoView" />
-
-    <ImageView
-        android:id="@+id/SucceImage"
-        android:layout_width="141dp"
-        android:layout_height="143dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="190dp"
+        android:layout_height="134dp"
         android:elevation="5dp"
+        android:gravity="center"
+        android:text="Historique \ndes activités"
+        android:textColor="@color/textcolorblue"
+        android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="@+id/histoView"
-        app:layout_constraintEnd_toEndOf="@+id/SuccesView"
-        app:layout_constraintHorizontal_bias="0.566"
-        app:layout_constraintStart_toStartOf="@+id/SuccesView"
-        app:layout_constraintTop_toBottomOf="@+id/PlanifierText"
-        app:layout_constraintVertical_bias="0.513"
-        app:srcCompat="@drawable/ic_baseline_emoji_events_24" />
-
-    <TextView
-        android:id="@+id/SucceText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Succès"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/histoView"
-        app:layout_constraintEnd_toEndOf="@+id/SuccesView"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toStartOf="@+id/SuccesView" />
-
-    <View
-        android:id="@+id/stats"
-        android:layout_width="374dp"
-        android:layout_height="228dp"
-        android:background="@color/colorView"
-        android:elevation="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.473"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.129">
-
-    </View>
-
-    <TextView
-        android:id="@+id/succepourcentage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="5dp"
-        android:text="succès : 10/20 "
-        android:textColor="@color/textcolorblue"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/progressbarObejectif"
-        app:layout_constraintEnd_toEndOf="@+id/progressbarObejectif"
-        app:layout_constraintStart_toStartOf="@+id/progressbarObejectif"
-        app:layout_constraintTop_toTopOf="@+id/stats"
-        app:layout_constraintVertical_bias="0.825" />
-
-    <TextView
-        android:id="@+id/pourcentagestats"
-        android:layout_width="39dp"
-        android:layout_height="29dp"
-        android:elevation="5dp"
-        android:text="50% "
-        android:textColor="@color/textcolorblue"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/stats"
-        app:layout_constraintEnd_toEndOf="@+id/stats"
-        app:layout_constraintHorizontal_bias="0.82"
-        app:layout_constraintStart_toStartOf="@+id/stats"
-        app:layout_constraintTop_toTopOf="@+id/stats"
-        app:layout_constraintVertical_bias="0.954" />
-
-    <TextView
-        android:id="@+id/nom_stats"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:elevation="5dp"
-        android:text="Benoit Fauchery"
-        android:textColor="@color/textcolorblue"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/stats"
-        app:layout_constraintEnd_toEndOf="@+id/stats"
-        app:layout_constraintTop_toTopOf="@+id/stats"
-        app:layout_constraintVertical_bias="0.102" />
-
-    <TextView
-        android:id="@+id/totalHeure_sport"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:elevation="5dp"
-        android:text="durée de sport: 45 h "
-        android:textColor="@color/textcolorblue"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/stats"
-        app:layout_constraintStart_toStartOf="@+id/stats"
-        app:layout_constraintTop_toTopOf="@+id/stats"
-        app:layout_constraintVertical_bias="0.284" />
-
-    <ProgressBar
-        android:id="@+id/progressbarObejectif"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="230dp"
-        android:layout_height="29dp"
-        android:elevation="5dp"
-        android:max="100"
-        android:progress="50"
-        android:progressBackgroundTint="@color/colorAccent"
-        android:progressTint="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="@+id/stats"
-        app:layout_constraintEnd_toEndOf="@+id/stats"
-        app:layout_constraintHorizontal_bias="0.145"
-        app:layout_constraintStart_toStartOf="@+id/stats"
-        app:layout_constraintTop_toTopOf="@+id/stats"
-        app:layout_constraintVertical_bias="0.954" />
-
-    <TextView
-        android:id="@+id/termine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:elevation="5dp"
-        android:text="activités terminés: 45 "
-        android:textColor="@color/textcolorblue"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/stats"
-        app:layout_constraintStart_toStartOf="@+id/stats"
-        app:layout_constraintTop_toTopOf="@+id/stats"
-        app:layout_constraintVertical_bias="0.436" />
-
-    <TextView
-        android:id="@+id/textStats"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="5dp"
-        android:text="Mes statistiques"
-        android:textColor="@color/textcolorblue"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/stats"
-        app:layout_constraintTop_toTopOf="@+id/stats" />
-
-    <ImageButton
-        android:id="@+id/nextModifierActivite"
-        android:layout_width="47dp"
-        android:layout_height="41dp"
-        android:layout_marginBottom="4dp"
-        android:background="@color/colorPrimary"
-        android:elevation="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/stats"
-        app:layout_constraintEnd_toEndOf="@+id/stats"
-        app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />
+        app:layout_constraintEnd_toEndOf="@+id/histoView"
+        app:layout_constraintHorizontal_bias="0.97"
+        app:layout_constraintStart_toStartOf="@+id/histoView"
+        app:layout_constraintTop_toTopOf="@+id/histoView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
