--- a/app/src/main/res/layout/activity_choix3_sports.xml
+++ b/app/src/main/res/layout/activity_choix3_sports.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".choix3Sports"
+    tools:context=".activite.choix3Sports"
     android:animateLayoutChanges="true"
     android:background="@drawable/gradient_list"
     android:id="@+id/layoutchoix">
