--- a/app/src/main/res/layout/activity_consultation.xml
+++ b/app/src/main/res/layout/activity_consultation.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.sportetu.Recommandation">
+    tools:context=".activite.consultationActivity"
+    android:background="@drawable/gradient_list"
+    android:id="@+id/layoutentr">
 
-    <TextView
-        android:id="@+id/testRecommandation"
-        android:layout_width="122dp"
-        android:layout_height="64dp"
-        android:text="TEST"
-        android:textSize="24sp"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerView_activite_plan"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
