--- a/app/src/main/res/layout/activity_passerelle.xml
+++ b/app/src/main/res/layout/activity_passerelle.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Passerelle">
+    tools:context=".activite.Passerelle">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
