--- a/app/src/main/res/layout/activity_programmation.xml
+++ b/app/src/main/res/layout/activity_programmation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".entrainement.ProgrammationActivity"
+    tools:context=".entrainement.programmationActivity"
     android:background="@drawable/gradient_list"
     android:id="@+id/layoutprog">
 
